--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -19,14 +19,11 @@
                 <MudGrid Spacing="4">
                     <MudItem xs="12">
                         <MudPaper Class="pa-4">
+                            <MudText Typo="Typo.h5">Season @Season.Year</MudText>
                             <MudStack Row="true">
-                                <div>
-                                    <MudText>Hello, the season year is @Season.Year</MudText>
-                                    <MudText>Currenly in status: @Season.State.ToString()</MudText>
-                                    <MudText>Development status: season configuration is done</MudText>
-                                </div>
+                                <MudText>Currenly in status: @Season.State.ToString()</MudText>
                                 <MudSpacer />
-                                <div>-</div>
+                                <MudText>Hello from the other side</MudText>
                             </MudStack>
                         </MudPaper>
                     </MudItem>
@@ -75,7 +72,14 @@
                     </MudItem>
 
                     <MudItem xs="6">
-                        <MudPaper Height="200px" Elevation="15" Class="pa-4"></MudPaper>
+                        <MudPaper Height="200px" Elevation="15" Class="pa-4">
+                            <MudText Typo="Typo.h6">Season statistics</MudText>
+                            <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary" Size="Size.Small">
+                                <MudButton>Qualy battles</MudButton>
+                                <MudButton>Additional button</MudButton>
+                                <MudButton>Additional button</MudButton>
+                            </MudButtonGroup>
+                        </MudPaper>
                     </MudItem>
 
                     <MudItem xs="6">
