--- a/SimTECH/SimTECH/Pages/Setup/Traits.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Traits.razor
@@ -16,7 +16,7 @@
             <PropertyColumn Property="e => e.Name" />
             <PropertyColumn Property="e => e.Description" />
             <PropertyColumn Property="e => e.Type" />
-            <PropertyColumn Property="e => e.ForWetConditions" Title="Wet" />
+            <PropertyColumn Property="e => e.ForWetConditions" Title="Only when wet" />
             <PropertyColumn Property="e => e.State" />
             <TemplateColumn Sortable="false" CellClass="d-flex justify-end">
                 <CellTemplate>
