--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -1,13 +1,13 @@
 ﻿@page "/race/{RaceId:long}"
 
-@inject RaceService RaceService
-@inject NavigationManager Nav
-@inject IDialogService DialogService
-@inject ISnackbar Snackbar
+@inject RaceService _raceService
+@inject NavigationManager _nav
+@inject IDialogService _dialogService
+@inject ISnackbar _snackbar
 
 @if (!loading)
 {
-    <MudTable Items="@Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenBy(e => e.Position)" Dense="true" Style="width: 1600px">
+    <MudTable Items="@Model.RaceDrivers.OrderBy(e => (int)e.Status).ThenBy(e => e.Position)" Dense="true" Style="width: 1600px" id="race-display-elem" >
         <ToolBarContent>
             <MudStack Row="true" Justify="Justify.SpaceBetween" Style="width:100%">
                 <MudText>
@@ -111,8 +111,8 @@
         <FooterContent>
             <MudTd colspan="20">
                 <MudStack Row="true" Justify="Justify.SpaceBetween">
-                    <MudIconButton Icon="@Icons.Material.Outlined.Image" Color="Color.Primary" OnClick="ShowImage" />
-                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" OnClick="ShowGraph" />
+                    <MudIconButton Icon="@Icons.Material.Outlined.Image" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowImage" />
+                    <MudIconButton Icon="@Icons.Material.Outlined.InsertChart" Color="Color.Primary" Variant="Variant.Outlined" OnClick="ShowGraph" />
                 </MudStack>
             </MudTd>
         </FooterContent>
@@ -143,7 +143,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Model = await RaceService.RetrieveRaceModel(RaceId);
+        Model = await _raceService.RetrieveRaceModel(RaceId);
         allotments = Model.Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new();
         minLapRng = Model.Season.RngMinimum;
         maxLapRng = Model.Season.RngMaximum;
@@ -273,7 +273,7 @@
         if (tyreMinWear <= tyreMaxWear)
         {
             tyreMaxWear = tyreMinWear - 1;
-            Snackbar.Add("A situation occurred where the maximum wear was higher than the minimum wear, please reconsider some set tyre wear values!");
+            _snackbar.Add("A situation occurred where the maximum wear was higher than the minimum wear, please reconsider some set tyre wear values!");
         }
 
         // Maximum wear is more than the tyre can handle, it's time for a pitstop!
@@ -338,16 +338,19 @@
 
     static int GetQualifyingBonus(int grid, int driverCount, int bonus) => (driverCount * bonus) - ((grid - 1) * bonus);
 
-    void ShowImage() => Snackbar.Add("Not implemented yet", Severity.Warning);
+    void ShowImage()
+    {
+        _snackbar.Add("Not implemented yet", Severity.Warning);
+    }
 
     async Task ShowGraph()
     {
         var parameters = new DialogParameters { ["Drivers"] = Model.RaceDrivers };
 
-        _ = await DialogService.ShowAsync<GapChartDialog>("Gapper chart", parameters);
+        _ = await _dialogService.ShowAsync<GapChartDialog>("Gapper chart", parameters);
     }
 
-    async Task PersistLapScores(List<LapScore> lapScores) => await RaceService.PersistLapScores(lapScores);
+    async Task PersistLapScores(List<LapScore> lapScores) => await _raceService.PersistLapScores(lapScores);
 
     async Task Finish()
     {
@@ -362,8 +365,10 @@
         await PersistLapScores(allLapScores);
 
         // Todo: check if this doesnt mess with the lapscores
-        await RaceService.FinishRace(finishedRace, finishedResults, scoredPoints);
+        await _raceService.FinishRace(finishedRace, finishedResults, scoredPoints);
 
-        Nav.NavigateTo($"/overview/{Model.Season.Id}/2"); // 2 = standingspanel
+        _nav.NavigateTo($"/overview/{Model.Season.Id}/2"); // 2 = standingspanel
     }
+
+
 }
