--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/components/{SeasonId:long}"
-@inject BreadcrumbProvider Bread
+@inject BreadcrumbProvider _bread
 @inject SeasonService SeasonService
 
 <PageTitle>Components</PageTitle>
@@ -52,7 +52,7 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="3">
-            <MudPaper Class="mud-height-full">
+            <MudPaper Class="pa-4 mud-height-full">
                 <MudText Typo="Typo.h4">Other</MudText>
                 <MudText Typo="Typo.body2">
                     ... Something related to this? I had an idea... but what?
@@ -71,8 +71,10 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Bread.SetBreadcrumbs(new List<BreadcrumbItem>()
+        _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
         {
+            new BreadcrumbItem("Home", href: "/"),
+            new BreadcrumbItem("Seasons", href: "seasons}"),
             new BreadcrumbItem("Overview", href: $"overview/{SeasonId}"),
             new BreadcrumbItem("Components", href: $"components/{SeasonId}"),
         });
